@@ -53,12 +53,10 @@ test -z "$srcdir" && srcdir=.
 check_autotool_version aclocal 1.9
 check_autotool_version automake 1.9
 check_autotool_version autoconf 2.53
-check_autotool_version glib-gettextize 2.0.0
-check_autotool_version intltoolize 0.21.0
+check_autotool_version intltoolize 0.35.0
 check_autotool_version pkg-config 0.14.0
 
-run glib-gettextize --force --copy
-run intltoolize --force --copy --automake
+run intltoolize --force --copy
 run aclocal -I build/m4/shamrock $ACLOCAL_FLAGS
 run autoconf
 run automake --gnu --add-missing --force --copy \
